Finished dishes module

--- a/GUI_Module/GUI_Module.csproj
+++ b/GUI_Module/GUI_Module.csproj
@@ -81,6 +81,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Dishes.txt" />
     <Content Include="drink.txt" />
     <Content Include="main.txt" />
     <Content Include="side.txt" />
