--- a/GUI_Module/GUI_Module.csproj
+++ b/GUI_Module/GUI_Module.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dishes.cs" />
+    <Compile Include="dishes.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
