--- a/GUI_Module/GUI_Module.csproj
+++ b/GUI_Module/GUI_Module.csproj
@@ -47,8 +47,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="dishes.cs" />
-    <Compile Include="Form1.cs">
     <Compile Include="BackOfHouse.cs" />
     <Compile Include="BackOfHouseGUI.cs">
       <SubType>UserControl</SubType>
@@ -73,6 +71,12 @@
     </Compile>
     <Compile Include="DishesPopUp.Designer.cs">
       <DependentUpon>DishesPopUp.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DishesPopUp2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DishesPopUp2.Designer.cs">
+      <DependentUpon>DishesPopUp2.cs</DependentUpon>
     </Compile>
     <Compile Include="FrontOfHouse.cs">
       <SubType>UserControl</SubType>
@@ -104,7 +108,6 @@
     <Compile Include="Kitchen.Designer.cs">
       <DependentUpon>Kitchen.cs</DependentUpon>
     </Compile>
-    <Compile Include="Order.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReorderPopUp.cs">
@@ -124,6 +127,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DishesPopUp.resx">
       <DependentUpon>DishesPopUp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DishesPopUp2.resx">
+      <DependentUpon>DishesPopUp2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrontOfHouse.resx">
       <DependentUpon>FrontOfHouse.cs</DependentUpon>
@@ -164,10 +170,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Dishes.txt" />
-    <Content Include="drink.txt" />
-    <Content Include="main.txt" />
-    <Content Include="side.txt" />
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
     <None Include="Resources\rms-logo-220.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
