--- a/GUI_Module/GUI_Module.csproj
+++ b/GUI_Module/GUI_Module.csproj
@@ -48,7 +48,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Appliance.cs" />
-    <Compile Include="Form1.cs">
     <Compile Include="BackOfHouse.cs" />
     <Compile Include="BackOfHouseGUI.cs">
       <SubType>UserControl</SubType>
@@ -105,9 +104,9 @@
       <DependentUpon>Inventory.cs</DependentUpon>
     </Compile>
     <Compile Include="KitchenModule.cs" />
-
-    <Compile Include="inventory.cs" />
-
+    <Compile Include="inventory.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Kitchen.cs">
       <SubType>UserControl</SubType>
     </Compile>
