Revert "Created DAvids setters and getters"
This reverts commit d030dba35a5cc82772ed66f504ab504205a47999.

--- a/GUI_Module/GUI_Module.csproj
+++ b/GUI_Module/GUI_Module.csproj
@@ -87,6 +87,9 @@
       <DependentUpon>FrontOfHouse.cs</DependentUpon>
     </Compile>
     <Compile Include="frontOfHouseCode.cs" />
+    <Compile Include="Home.Designer.cs">
+      <DependentUpon>Home.cs</DependentUpon>
+    </Compile>
     <Compile Include="Home1.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -94,6 +97,9 @@
       <DependentUpon>Home1.cs</DependentUpon>
     </Compile>
     <Compile Include="InventoryCode.cs" />
+    <Compile Include="Inventory.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="inventory.Designer.cs">
       <DependentUpon>inventory.cs</DependentUpon>
     <Compile Include="InventoryGUI.cs">
