fixed home page

--- a/GUI_Module/GUI_Module.csproj
+++ b/GUI_Module/GUI_Module.csproj
@@ -190,6 +190,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="home1.resx.txt" />
+    <None Include="Resources\openSignT.gif" />
+    <None Include="Resources\openSign1.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
