--- a/GUI_Module/GUI_Module.csproj
+++ b/GUI_Module/GUI_Module.csproj
@@ -189,6 +189,7 @@
     <None Include="Resources\rms-logo-220.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Dishes.txt" />
     <Content Include="home1.resx.txt" />
     <None Include="Resources\openSignT.gif" />
     <None Include="Resources\openSign1.gif" />
