--- a/GUI_Module/GUI_Module.csproj
+++ b/GUI_Module/GUI_Module.csproj
@@ -200,6 +200,7 @@
   <ItemGroup>
     <Content Include="Dishes.txt" />
     <Content Include="home1.resx.txt" />
+    <Content Include="ProductNumber.txt" />
     <None Include="Resources\openSignT.gif" />
     <None Include="Resources\openSign1.gif" />
   </ItemGroup>
