--- a/GUI_Module/GUI_Module.csproj
+++ b/GUI_Module/GUI_Module.csproj
@@ -199,7 +199,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Dishes.txt" />
+    <Content Include="ExpensesFile.txt" />
     <Content Include="home1.resx.txt" />
+    <Content Include="IncomeFile.txt" />
     <Content Include="ProductNumber.txt" />
     <None Include="Resources\openSignT.gif" />
     <None Include="Resources\openSign1.gif" />
