Added FOH popup when all tables are occupied

--- a/GUI_Module/GUI_Module.csproj
+++ b/GUI_Module/GUI_Module.csproj
@@ -141,6 +141,12 @@
     <Compile Include="KitchenOrderLevelPopUp.Designer.cs">
       <DependentUpon>KitchenOrderLevelPopUp.cs</DependentUpon>
     </Compile>
+    <Compile Include="AllTablesOccupiedPopUp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AllTablesOccupiedPopUp.Designer.cs">
+      <DependentUpon>AllTablesOccupiedPopUp.cs</DependentUpon>
+    </Compile>
     <Compile Include="LowTempPopUp.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -201,6 +207,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="KitchenOrderLevelPopUp.resx">
       <DependentUpon>KitchenOrderLevelPopUp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AllTablesOccupiedPopUp.resx">
+      <DependentUpon>AllTablesOccupiedPopUp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LowTempPopUp.resx">
       <DependentUpon>LowTempPopUp.cs</DependentUpon>
